fixing background layout issues

--- a/src/Components/BackgroundVideo.css
+++ b/src/Components/BackgroundVideo.css
@@ -1,25 +1,25 @@
 .video-container {
-  position: relative;
+  position: absolute;
   top: 0;
-  left: 0; /* Add this to ensure the video starts from the left */
+  left: 0; 
   width: 100%;
   height: 100vh;
   overflow: hidden;
   z-index: 0;
   cursor: none;
-  margin: 0; /* Make sure no margin causes overflow */
+  margin: 0; 
 }
 
 #myVideo {
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   object-fit: cover;
-
 }
 
-.video-container.scrolled #myVideo {
-  position: relative;  /* Allow the video to scroll with the page */
-  height: auto;        /* Adjust height if needed */
+
+.background-video{
+  height: 100vh;
+  object-fit: cover;
 }
